Bug 416791 - Latte-dock panel on right side of screen constantly flashing and sometimes corrupt
Summary: Latte-dock panel on right side of screen constantly flashing and sometimes co...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.8
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
: 416797 416876 416889 416919 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-01-26 15:25 UTC by Richard Ullger
Modified: 2020-01-29 18:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.8.1
Sentry Crash Report:


Attachments
Demo showing panel behaviour (3.27 MB, video/x-matroska)
2020-01-26 15:25 UTC, Richard Ullger
Details
latte layout file (9.97 KB, text/plain)
2020-01-26 16:30 UTC, Richard Ullger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Ullger 2020-01-26 15:25:22 UTC
Created attachment 125441 [details]
Demo showing panel behaviour

SUMMARY
After upgrading to v0.9.8 the panel down the right edge of the screen constantly flashes.

STEPS TO REPRODUCE
1. Set up a panel on the right edge of the screen
2. Upgrade latte-dock to 0.9.8
3. Restart latte-dock

OBSERVED RESULT
Panel down the right edge of the screen is constantly flashing and sometimes it's display is corrupt. See attached video.

EXPECTED RESULT
Panel should be static and not flash.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.0
Kernel Version: 5.4.15-arch1-1
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5 CPU M 430 @ 2.27GHz
Memory: 7.5 GiB of RAM


ADDITIONAL INFORMATION
Downgrading to 0.9.7 fixes the issue.
A dock I have on the left edge of the screen is unaffected.
Comment 1 Michail Vourlakos 2020-01-26 15:42:29 UTC
A. send your latte layout file to check it out in my system

B. After after updates always clear the cache afterwards:
 1. Close Latte
 2. Run from terminal "latte-dock --cc"
 3. Start Latte

C. Is your compositing enabled?
Comment 2 Richard Ullger 2020-01-26 16:30:34 UTC
Created attachment 125443 [details]
latte layout file

A. Attached

B. 1. Closed latte
   2. Ran latte-dock --cc from terminal. This command started latte-dock.

   Right hand panel still flashes.

C. System Settings > Display and Monitor > Enable compositor on startup is enabled.
Comment 3 Daniel 2020-01-26 16:35:22 UTC
I can confirm this (also pnael on the right side of the screen). It happens also to me on Arch Linux. Downgrading to .7 fixes it.
Comment 4 Michail Vourlakos 2020-01-26 17:41:11 UTC
Git commit a62c52eb52f685180d3a9965c0f8247fdd412027 by Michail Vourlakos.
Committed on 26/01/2020 at 17:36.
Pushed by mvourlakos into branch 'v0.9'.

improve availableScreenR*WithCriteria functions
FIXED-IN:0.9.8.1

M  +54   -62   app/lattecorona.cpp
M  +8    -0    app/lattecorona.h
M  +11   -1    app/view/positioner.cpp
M  +1    -1    app/view/settings/primaryconfigview.cpp

https://commits.kde.org/latte-dock/a62c52eb52f685180d3a9965c0f8247fdd412027
Comment 5 Michail Vourlakos 2020-01-26 18:47:05 UTC
*** Bug 416797 has been marked as a duplicate of this bug. ***
Comment 6 Richard Ullger 2020-01-26 20:41:12 UTC
Fix confirmed. Thanks for the quick turnaround.
Comment 7 Michail Vourlakos 2020-01-29 18:27:03 UTC
*** Bug 416876 has been marked as a duplicate of this bug. ***
Comment 8 Michail Vourlakos 2020-01-29 18:27:13 UTC
*** Bug 416889 has been marked as a duplicate of this bug. ***
Comment 9 Michail Vourlakos 2020-01-29 18:27:41 UTC
*** Bug 416919 has been marked as a duplicate of this bug. ***