improve availableScreenR*WithCriteria functions

BUG:416791
FIXED-IN:0.9.8.1